--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	CloudBEE by vitaforas
+	html5up.net | Mavi Maece
+	also visit (impressum.vitaforas.de)
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>vitaforas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>vitaforas</h1>
+								<p>Web Services by<a href="https://zero.vitaforas.de/nextcloud/login">CloudBEE</a> Impressum<br />
+								for free under the <a href="https://Impressum.vitaforas.de">vitaforas</a> fV.</p>
 							</div>
 						</div>
 						<nav>
@@ -343,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; vitaforas <a href="https://zero.vitaforas.de/nextcloud/login">CloudBEE</a>.</p>
 					</footer>
 
 			</div>
