--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	CloudBEE by vitaforas
-	html5up.net | Mavi Maece
+	vitaforas.de | Mavi Maece
 	also visit (impressum.vitaforas.de)
 -->
 <html>
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1>vitaforas</h1>
 								<p>Web Services by<a href="https://zero.vitaforas.de/nextcloud/login">CloudBEE</a> Impressum<br />
-								for free under the <a href="https://Impressum.vitaforas.de">vitaforas</a> fV.</p>
+								for you <a href="https://Impressum.vitaforas.de">HERE</a> fV.</p>
 							</div>
 						</div>
 						<nav>
