--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>vitaforas</h1>
-								<p>Web Services by<a href="https://zero.vitaforas.de/nextcloud/login"> CloudBEE</a> Impressum<br />
-								for you <a href="https://Impressum.vitaforas.de">HERE</a> fV.</p>
+								<p>Web Services by<a href="https://zero.vitaforas.de/nextcloud/login"> CloudBEE</a> Impressum <br />
+								or<a href="https://Impressum.vitaforas.de"> click</a> here</p>
 							</div>
 						</div>
 						<nav>
