--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>vitaforas</h1>
-								<p>Visit Desktop Site <a href="https://vitaforas.de"> CloudBEE</a> or Download our App<br />
-								or<a href="https://bit.ly/3OkPSS9"> HERE</a> here</p>
+								<p>Visit Desktop Site <a href="https://vitaforas.de"> CloudBEE</a> or <br />
+								Download<a href="https://bit.ly/3OkPSS9"> our App</a> here</p>
 							</div>
 						</div>
 						<nav>
