--- a/index.html
+++ b/index.html
@@ -62,17 +62,15 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Our Address
-Country:
-Region:
-City:
-Phone:
-Email:
-Germany
-Schleswig-Holstein
-Schleswig
-015678 193739
-kontakt@vitaforas.de
-kontakt@vitaforas.de
+Country: Germany
+Region: Schleswig-Holstein
+City: Schleswig
+Phone: 015678 193739
+Email: kontakt@vitaforas.de
+
+
+
+
 
 In God we Trust</p>
 							</article>
