--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>With one Donation, you can search and browse privately, avoiding trackers. Tired of being tracked online? We can help. Take control of your data online.</p>
+								<p>dDNS
+VPN
+Proxy
+CloudBEE
+CloudBrowser
+
+.Simply free</p>
 							</article>
 
 						<!-- About -->
