--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>dDNS
-VPN
-Proxy
-CloudBEE
-CloudBrowser
+								<p>Proxy</p>
+<p>VPN</p>
+<p>CloudBrowser</p>
+<p>dDNS</p>
+							<p>	CloudBEE	</p>							
+								<p>in Good we Trust</p>
 
-.Simply free</p>
+
+.Simply free</p> <a href="#work">awesome work</a>.
 							</article>
 
 						<!-- About -->
