--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
 <p>CloudBrowser</p>
 <p>dDNS</p>
 							<p>	CloudBEE	</p>							
-								<p>in Good we Trust</p>
-
-
-.Simply free</p> <a href="#work">awesome work</a>.
+								<p></p> <a href="#work">Simply free</a>.
 							</article>
 
 						<!-- About -->
