--- a/index.html
+++ b/index.html
@@ -66,18 +66,16 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Our Address
-Country: Germany
-Region: Schleswig-Holstein
-City: Schleswig
-Phone: 015678 193739
-Email: kontakt@vitaforas.de
 
+								<p>Our Address</p>
+<p>Country: Germany</p>
+<p>Region: Schleswig-Holstein</p>
+<p>City: Schleswig</p>
+<p>Phone: 015678 193739</p>
+<p>Email: kontakt@vitaforas.de</p>
 
+<p>In God we Trust</p>
 
-
-
-In God we Trust</p>
 							</article>
 
 						<!-- Contact -->
