--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 <p>VPN</p>
 <p>CloudBrowser</p>
 <p>dDNS</p>
-							<p>	CloudBEE	</p>							
-								<p></p> <a href="#work">Simply free</a>.
+							<p>	Cloud Storage	</p>				
+	<p>		</p>							
+								
+								<p></p> <a href="#work">Simply free @ CloudBEE</a>
 							</article>
 
 						<!-- About -->
