--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Über uns</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>With one Donation, you can search and browse privately, avoiding trackers. Tired of being tracked online? We can help. Take control of your data online. <a href="#work">awesome work</a>.</p>
 								<p>in Good we Trust</p>
