--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 							<article id="intro">
 								<h2 class="major">Über uns</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>With one Donation, you can search and browse privately, avoiding trackers. Tired of being tracked online? We can help. Take control of your data online. <a href="#work">awesome work</a>.</p>
-								<p>in Good we Trust</p>
+								<p>With one Donation, you can search and browse privately, avoiding trackers. Tired of being tracked online? We can help. Take control of your data online. <a href="#work">vitaforas.de</a> </p>
+								<p> </p>
+		<p>in Good we Trust</p>
 							</article>
 
 						<!-- Work -->
@@ -77,6 +78,7 @@
 <p>Phone: 015678 193739</p>
 <p>Email: kontakt@vitaforas.de</p>
 
+		<p></p>
 <p>In God we Trust</p>
 
 							</article>
