--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Services</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						<p>	Cloud Storage	</p>
 <p>CloudBrowser</p>
