--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; vitaforas <a href="https://zero.vitaforas.de/nextcloud/login">CloudBEE</a>.</p>
+						<p class="copyright">&copy; vitaforas <a href="https://vitaforas.de/About.html">Impressum</a>.</p>
 					</footer>
 
 			</div>
