--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>vitaforas</h1>
-								<p>Visit Desktop Site <a href="https://vitaforas.de"> CloudBEE</a> o<br />r     </p>             <a href="https://bit.ly/3OkPSS9">
+								<p>Visit Desktop Site <a href="https://vitaforas.de"> CloudBEE</a> o<br />r </p>             
+<a href="https://bit.ly/3OkPSS9">
  <p> Download</a> our App</p>
 							</div>
 						</div>
