--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
+							<article id="Kontakt">
+								<h2 class="major">Support</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
