--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">Our Address</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 
-								<p>Our Address</p>
+								<p></p>
 <p>Country: Germany</p>
 <p>Region: Schleswig-Holstein</p>
 <p>City: Schleswig</p>
