--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">Über uns</a></li>
+								<li><a href="#work">Services</a></li>
+								<li><a href="#about">Kontakt</a></li>
+								<li><a href="#contact">Support</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
