--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="Kontakt">
+							<article id="contact">
 								<h2 class="major">Support</h2>
 								<form method="post" action="#">
 									<div class="fields">
