--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 							<article id="intro">
 								<h2 class="major">Über uns</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>With one Donation, you can search and browse privately, avoiding trackers. Tired of being tracked online? We can help. Take control of your data online. <a href="#work">vitaforas.de</a> </p>
+								<p>With one Donation, you can search and browse privately, avoiding trackers. </p>
+<p>Tired of being tracked online? </p>
+<p>We can help. Take control of your data online. 
+ <a href="#work">vitaforas.de</a> </p>
+								
 								<p> </p>
 		<p>in Good we Trust</p>
 							</article>
