--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<p>With one Donation, you can search and browse privately, avoiding trackers. </p>
 <p>Tired of being tracked online? </p>
 <p>We can help. Take control of your data online. </p>
-<p> <a href="#work">vitaforas.de</a> </p>
+ <a href="#work">vitaforas.de</a>
 								
 								<p> </p>
 		<p>in Good we Trust</p>
