--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 								<h2 class="major">Über uns</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>With one Donation, you can search and browse privately, avoiding trackers. </p>
+
 <p>Tired of being tracked online? </p>
-<p>We can help. Take control of your data online. </p>
-<a href="#work">vitaforas.de</a>
+
+<p>We can help. Take control of your da
+ta online. </p> <a href="#work">vitaforas.de</a>
 								
 								<p> </p>
 		<p>in Good we Trust</p>
