--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>Tired of being tracked online? </p>
 
 <p>We can help. Take control of your da
-ta online. </p> <a href="#work">vitaforas.de</a>
+ta online. <a href="#work">vitaforas.de</a></p>
 								
 								<p> </p>
 		<p>in Good we Trust</p>
