--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 
 <p>Tired of being tracked online? </p>
 
-<p>We can help. Take control of your da
-ta online. <a href="#work">vitaforas.de</a></p>
+<p>We can help. Take control of your data online. <a href="#work">vitaforas.de</a></p>
 								
 								<p> </p>
 		<p>in Good we Trust</p>
