--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <p>We can help. Take control of your data online. <a href="#work">vitaforas.de</a></p>
 								
 								<p> </p>
-		<p>in Good we Trust</p>
+		<p>In God we Trust</p>
 							</article>
 
 						<!-- Work -->
