--- a/index.html
+++ b/index.html
@@ -48,6 +48,84 @@
 							<article id="intro">
 								<h2 class="major">Über uns</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+
+
+
+				<p><strong class="color3"> 
+
+
+
+
+
+
+
+
+___________Downloads___________
+  
+<p># Klick<a href="https://www.appcreator24.com/app2637910-1cnwal"> HIER</a> zum Download<br />  unserer E-Book App 📚</p>    
+
+<p> 
+..oder Klick<a href="https://www.appcreator24.com/app2632089-shrjv9"> HIER</a> und<br /> schau in die vitaforas App.
+</p>        
+
+
+
+<p></p>
+<p></p> 
+ ____________Services____________
+
+      
+<p>
+•Beratung • VPN,dDNS,Proxy • E-Book Kauf & Kauf über Affiliate Links • Cloud Speicher & Cloud Browser• </p>
+
+<p> 
+Web Services & More. 🐝
+Hosted by vitaforas <br />
+<a href="#about">Simply free @ CloudBEE</a> </p>
+
+<p></p>
+
+<p></p>
+
+____________Präsents____________
+
+
+<p>	
+YouTube, Instagram, Tiktok, 
+Twitch, Telegramm, Twitter, Google & Google Play Store & more.
+</p>	
+
+ <p> # 🛍️Klick<a href="https://www.spreadshirt.de/shop/user/.vitaforas/?srEdit=pa#?affiliateId=1257693"> HIER</a> und Besuche<br /> unseren SpreadShop 👕🛒</p>    
+
+ <p> # 🖥️Klick<a href="https://youtube.com/@vitaforas2869"> HIER</a> für einen Besuch<br /> des vitaforas YouTube Kanals 🎬🎥</p>    
+
+ <p> # 💰Und gerne Klick<a href="https://www.paypal.me/TalIlex"> HIER</a> und <br /> sende Unterstützung über PayPal 🪙💸</p>    
+
+	
+				
+
+	<p>
+__________
+</p>
+
+<p>
+Best regards ♥️ &<a href="https://EasterEgg_freeSHIRT_sticker">.</a> Vielen Dank<br
+</p>
+
+
+
+	<p>
+</p>
+
+
+
+
+
+</strong></p>
+
+
+
+
 								<p>With one Donation, you can search and browse privately, avoiding trackers. </p>
 
 <p>Tired of being tracked online? </p>
