--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 								<h2 class="major">Über uns</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 
+<strong class="color3"> 
+
+
+
 <p>With one Donation, you can search and browse privately, avoiding trackers. </p>
 
 <p>Tired of being tracked online? </p>
@@ -123,6 +127,9 @@ Best regards ♥️ &<a href="https://EasterEgg_freeSHIRT_sticker">.</a> Vielen 
 __________
 </p>
 
+
+
+</strong>
 
 	</article>
 
