--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 								
 								<p> </p>
 		<p>In God we Trust</p>
+
+
+
+</strong>
+
 							</article>
 
 						<!-- Work -->
@@ -70,6 +75,9 @@
 					
 
 	
+<strong class="color3"> 
+
+
 
 
 ___________Downloads___________
@@ -137,14 +145,18 @@ __________
 							<article id="about">
 								<h2 class="major">Our Address</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+
+<strong class="color3"> 
+
 <p>Country: Germany</p>
 <p>Region: Schleswig-Holstein</p>
 <p>City: Schleswig</p>
 <p>Phone: 015678 193739</p>
 <p>Email: kontakt@vitaforas.de</p>
 
-	
 
+
+</strong>
 							</article>
 
 						<!-- Contact -->
