--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@ ___________Downloads___________
   
 <p># Klick<a href="https://www.appcreator24.com/app2637910-1cnwal"> HIER</a> zum Download<br />  unserer E-Book App 📚</p>    
 
+
+<p>[[ <a href="https://vitaforas.github.io/Leseprobe/#"> Leseprobe</a>  ]] 🔍<br /> </p>    
+
+
 <p> 
 ..oder Klick<a href="https://www.appcreator24.com/app2632089-shrjv9"> HIER</a> und<br /> schau in die vitaforas App.
 </p>        
