--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ __________
 
 
 <p>
-Best regards ♥️ &<a href="https://EasterEgg_freeSHIRT_sticker">.</a> Vielen Dank<br
+Best regards ♥️ &<a href="https://vitaforas.github.io/EasterEgg/">.</a> Vielen Dank<br
 </p>
 
 <p>
