--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@ Twitch, Telegramm, Twitter, Google & Google Play Store & more.
 
 
 
+ <p> # 🍁CSC Schleswig e.V.i.G.<a href="https://CSC.vitaforas.de"> HIER</a> und <br /> sende noch heute deinen Mitgliedsantrag 🍀🌱</p>    
+
+
 <p>
 __________
 </p>
