--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Twitch, Telegramm, Twitter, Google & Google Play Store & more.
 
 
 
- <p> # 🍁CSC Schleswig e.V.i.G.<a href="https://CSC.vitaforas.de"> HIER</a> und <br /> sende noch heute deinen Mitgliedsantrag 🍀🌱</p>    
+ <p> # 🍁CSC Schleswig e.V i.G<a href="https://CSC.vitaforas.de"> HIER</a> und <br /> sende noch heute deinen Mitgliedsantrag 🍀🌱</p>    
 
 
 <p>
