--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; vitaforas <a href="https://vitaforas.de/About.html">Impressum</a> </p>
+						<p class="copyright">&copy; vitaforas <a href="https://cloudbee.vitaforas.de/About.html">Impressum</a> </p>
 					</footer>
 
 			</div>
