--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 							<ul>
 								<li><a href="#intro">Über uns</a></li>
 								<li><a href="#work">Services</a></li>
-								<li><a href="#about">Kontakt</a></li>
-								<li><a href="#contact">Support</a></li>
+								<li><a href="#about">Impressum</a></li>
+								<li><a href="#contact">Kontakt</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
