--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <strong class="color3"> 
 
-Web-Services & More. 
+IT-Ingenieur für Web-Services & More. 
 Hosted by VitaForas ♥️
 
 <p>With one Donation, you can search and browse privately, avoiding trackers. </p>
