--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 IT-Ingenieur für Web-Services & More. 
 Hosted by VitaForas ♥️
 
+
+<p>Du brauchst Unterstützung für die Webpräsenz deines Unternehmens ? Webdesign, Serverwartung, Instandhaltung, Inbetriebnahme und mehr.</p>
+
 <p>With one Donation, you can search and browse privately, avoiding trackers. </p>
 
 <p>Tired of being tracked online? </p>
