--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@ IT-Ingenieur für Web-Services & More.
 
 <p>Du brauchst Unterstützung für die Webpräsenz deines Unternehmens ? Webdesign, Serverwartung, Instandhaltung, Inbetriebnahme und mehr.</p>
 
-Hosted by VitaForas ♥️
-
+<p>Hosted by VitaForas ♥️ </p>
 
 <p>With one Donation, you can search and browse privately, avoiding trackers. </p>
 
