--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@ IT-Ingenieur für Web-Services & More.
 <p>Hosted by VitaForas ♥️ </p>
 
 <p>__________ </p>
-Test Account Daten:
-<p>__________ </p>
+
+<p>Test Account Daten: </p>
 CloudBEE🐝 [[gast//hotelgast]]
 <p>VM 📲 [[0000]] </p>
 
 
 <p>feel free to Test us.</p>
+
+<p> </p>
 
 __________
 <p>With one Donation, you can search and browse privately, avoiding trackers. </p>
