--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ ___________Downloads___________
 
       
 <p>
-•Beratung • VPN,dDNS,Proxy • E-Book Kauf & Kauf über Affiliate Links • Cloud Speicher & Cloud Browser• </p>
+• Beratung • Installation • Inbetriebnahme , Instandhaltung • VPN,dDNS,Proxy • E-Book • Affiliate Links • Trash-Mail • VM •
+Cloud Speicher • Cloud Browser• </p>
 
 <p> 
 Web Services & More. 🐝
