--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@ IT-Ingenieur für Web-Services & More.
 
 <p>Du brauchst Unterstützung für die Webpräsenz deines Unternehmens ? Webdesign, Serverwartung, Instandhaltung, Inbetriebnahme und mehr.</p>
 
+Hier findest du 16 Jahre Erfahrung und Erfolg in der IT-Szene. 
+[[ Viren / Trojaner / Scripte / Account Sicherheit / Cloud Services / Beratung / Inbetriebnahme / Instandhaltung / Software  / Hardware & mehr.]]
+
 <p>Hosted by VitaForas ♥️ </p>
 
 <p> </p>
