--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ IT-Ingenieur für Web-Services & More.
 
 <p>Du brauchst Unterstützung für die Webpräsenz deines Unternehmens ? Webdesign, Serverwartung, Instandhaltung, Inbetriebnahme und mehr.</p>
 
-Hier findest du 16 Jahre Erfahrung und Erfolg in der IT-Szene. 
-[[ Viren / Trojaner / Scripte / Account Sicherheit / Cloud Services / Beratung / Inbetriebnahme / Instandhaltung / Software  / Hardware & mehr.]]
+Mit uns hast du 16 Jahre Erfahrung an deiner Seite mit zahlreichen Erfolgen in der IT-Szene. 
+[[ Viren / Trojaner / Scripte / Account Sicherheit / Sicherheitslücken / Cloud Services / Beratung / Inbetriebnahme / Instandhaltung / Software  / Hardware & mehr.]]
 
 <p>Hosted by VitaForas ♥️ </p>
 
