--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ IT-Ingenieur für Web-Services & More.
 <p>Du brauchst Unterstützung für die Webpräsenz deines Unternehmens ? Webdesign, Serverwartung, Instandhaltung, Inbetriebnahme und mehr.</p>
 
 Mit uns hast du 16 Jahre Erfahrung an deiner Seite mit zahlreichen Erfolgen in der IT-Szene. 
-[[ Viren / Trojaner / Scripte / Account Sicherheit / Sicherheitslücken / Hacking, Cracking, Modden / Cloud Services / Beratung / Inbetriebnahme / Instandhaltung / Software  / Hardware & mehr.]]
+[[ Viren / Trojaner / Scripte / Account Sicherheit / Sicherheitslücken / Hacking, Cracking, Modden / Web-Services / Cloud Services / Beratung / Inbetriebnahme / Instandhaltung / Software  / Hardware & mehr.]]
 
 <p>Hosted by VitaForas ♥️ </p>
 
