--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
 IT-Ingenieur für Web-Services & More. 
 
-<p>Du brauchst Unterstützung für die Webpräsenz deines Unternehmens ? Webdesign, Serverwartung, Instandhaltung, Inbetriebnahme und mehr.</p>
+<p>Du brauchst Unterstützung für die Webpräsenz deines Unternehmens ? </p>
 
 Mit uns hast du 16 Jahre Erfahrung an deiner Seite mit zahlreichen Erfolgen in der IT-Szene. 
-[[ Viren / Trojaner / Scripte / Account Sicherheit / Web-Design / Sicherheitslücken / Hacking, Cracking, Modden / Web-Services / Cloud Services / Beratung / Umsetzung / Inbetriebnahme / Instandhaltung / Server / Software / Hardware & mehr.]]
+[[ Viren / Trojaner / Scripte / Account Sicherheit / Web-Design / Serverwartung / Sicherheitslücken / Hacking, Cracking, Modden / Web-Services / Cloud Services / Beratung / Umsetzung / Inbetriebnahme / Instandhaltung / Server / Software / Hardware & mehr.]]
 
 <p>Hosted by VitaForas ♥️ </p>
 
