--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@ Mit der Nutzung unserer App bestätigst du alle Informationen gelesen und versta
 Impressum
 </p>
 _____________
-<p>Anbieter dieser Website ist die vitaforas Foundation Inc., eingetragen beim vitaforas fV., Mitglied unter der Nummer N01000008869. Die vitaforas Foundation ist eine freie Stiftung nach dem Recht des US-Bundesstaates Florida. Der verantwortliche Ansprechpartner – gleichzeitig Designated Agent im Sinne des Digital Millennium Copyright Act – ist Marvin Döffinger.</p>
+<p>Anbieter dieser Website ist die vitaforas Foundation Inc., eingetragen beim vitaforas fV., Mitglied unter der Nummer N01000008869. Die vitaforas Foundation ist eine freie Stiftung nach dem Recht des US-Bundesstaates Florida. Der verantwortliche Ansprechpartner – gleichzeitig Designated Agent im Sinne des Digital Millennium Copyright Act – ist der vitaforas eV.iG.</p>
 
 <p>vitaforas Foundation Inc.</p>
-<p>Straße: Altfeld 5 </p>
+<p>Straße: Auf den Königswiesen 1</p>
 <p>Stadt, PLZ: Schleswig, 24837</p>
 <p>Region: Schleswig-Holstein</p>
 <p>Land: Deutschland</p> 
