--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 						<div class="content">
 							<div class="inner">
 								<h1>vitaforas</h1>
+
+<p><img src="LOGO.png"></p>  
+
+
 								<p>Visit Desktop Site <a href="https://cloudbee.vitaforas.de"> CloudBEE</a> o<br />r </p>             
 <a href="https://bit.ly/3OkPSS9">
  <p> Download</a> our App</p>
