--- a/index.html
+++ b/index.html
@@ -813,11 +813,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+												<input type="text" name="demo-name" id="demo-name" value="Max Mustermann" placeholder="Jane Doe" />
 											</div>
 											<div class="field half">
 												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+												<input type="email" name="demo-email" id="demo-email" value="kontakt@vitaforas.de" placeholder="kontakt@vitaforas.de" />
 											</div>
 											<div class="field">
 												<label for="demo-category">Category</label>
@@ -863,7 +863,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; vitaforas <a href="https://cloudbee.vitaforas.de/About.html">Impressum</a> </p>
+						<p class="copyright">&copy; vitaforas <a href="https://vitaforas.github.io/HTML5/#about">Impressum</a> </p>
 					</footer>
 
 			</div>
