--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 </head>
 <body>
      <figure id="video_player">
-     <video controlls widht="700px">
+     <video controlls widht="1800px">
      <source src="video1.mp4" type=video/mp4>
      <source src="video1.webm" type=video/webm>
      </video>
      <figcaption>
      <u1>
-     <1i><a href="video1.mp4">Play video 1</a></1i>
-     <1i><a href="video2.mp4">Play video 1</a></1i>
-     <1i><a href="video3.mp4">Play video 1</a></1i>
+     <1i><a href="video1.mp4">Play Video 1</a></1i>
+     <1i><a href="video2.mp4">Play Video 2</a></1i>
+     <1i><a href="video3.mp4">Play Video 3</a></1i>
      </u1>
      </figcaption>
      </figure>
