--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
      <source src="video1.webm" type=video/webm>
      </video>
      <figcaption>
-     <u1>
-     <1i><a href="video1.mp4">Play Video 1</a></1i>
-     <1i><a href="video2.mp4">Play Video 2</a></1i>
-     <1i><a href="video3.mp4">Play Video 3</a></1i>
-     </u1>
+     <ul>
+     <li><a href="video1.mp4">Play Video 1</a></li>
+     <li><a href="video2.mp4">Play Video 2</a></li>
+     <li><a href="video3.mp4">Play Video 3</a></li>
+     </ul>
      </figcaption>
      </figure>
 </body>
