--- a/index.html
+++ b/index.html
@@ -19,3 +19,11 @@
      </figure>
 </body>
 </html>
+
+<script type="text/javascript">
+var video_player=document.getElementById("video_player"),
+links=video_player.getElementByTagName('a');
+for(var i=0; i<links.length; i++){
+links[i].onlclick=Händler;
+}
+</script>
