--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </html>
 
 <script type="text/javascript">
-var video_player=document.getElementById("video_player"),
-links=video_player.getElementByTagName('a');
+var video_player=document.getElementsById("video_player"),
+links=video_player.getElementsByTagName('a');
 for(var i=0; i<links.length; i++){
-links[i].onlclick=Händler;
+links[i].onclick=handler;
 }
 </script>
