--- a/index.html
+++ b/index.html
@@ -26,4 +26,17 @@ links=video_player.getElementsByTagName('a');
 for(var i=0; i<links.length; i++){
 links[i].onclick=handler;
 }
+
+function handler(e){
+e.preventDefault();
+videotarget=this.getAttribute("href");
+filename=videotarget.substr(0,videotarget.lastIndexOf('.'))||videotarget;
+video=document.querySelectorAll("#video_player video");
+video.removeAttribute('poster');
+source=document.querySelectAll("#video_player video source");
+source[0].src=filename + ".mp4";
+source[1].src=filename + ".webm";
+video.load();
+video.play();
+}
 </script>
