--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Cannabis Club Germany eV. iG.</h1>
+								<h1>vitaforasTV</h1>
 
 
 
@@ -90,10 +90,10 @@ video.play();
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Cannabis Club</a></li>
-								<li><a href="#work">Über uns</a></li>
-								<li><a href="#about">Aktuelles</a></li>
-								<li><a href="#contact">vitaforas</a></li>
+								<li><a href="#intro">Home</a></li>
+								<li><a href="#work">Support</a></li>
+								<li><a href="#about">Impressum</a></li>
+								<li><a href="#contact">Datenschutz</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -104,7 +104,7 @@ video.play();
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Cannabis Club</h2>
+								<h2 class="major">Home</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 							
 	<p>         
@@ -201,7 +201,7 @@ Nach einer Definition wurden Cannabis Social Clubs gegründet, um die Rechte von
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Über uns</h2>
+								<h2 class="major">Support</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 
 
@@ -309,7 +309,7 @@ Anbei ein Vordruck zum Versand.</p>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">Aktuelles</h2>
+								<h2 class="major">Impressum</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 
 <p>
@@ -353,7 +353,7 @@ Veranstaltungen:
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Unsere Services</h2>
+								<h2 class="major">Datenschutz</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
