--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@ video.play();
 }
 </script>
 
-
-
-<p><img src="LOGO.png"></p>  
+<img src="LOGO.png"> 
 
 								<p>Visit <a href="https://vitaforas.de"> vitaforas.de</a> o<br />r </p>             
 <a href="https://www.appcreator24.com/app2648348-r4ymif">
