--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
 <!DOCTYPE HTML>
 <!--
-	CloudBEE by vitaforas
-	vitaforas.de | Mavi Maece
-	also visit (impressum.vitaforas.de)
+	StreamTV © by vitaforas
 -->
 <html>
 	<head>
@@ -79,7 +77,7 @@ video.play();
 }
 </script>
 
-<img src="LOGO.png"> 
+
 
 								<p>Visit <a href="https://vitaforas.de"> vitaforas.de</a> o<br />r </p>             
 <a href="https://www.appcreator24.com/app2648348-r4ymif">
@@ -110,6 +108,10 @@ Herzlich Willkommen beim CSC Schleswig eV. iG.
  "Cannabis Social Club"
 </p>         
  
+
+<img src="LOGO.png"> 
+
+
 <p> 
 https://ibb.co/ySg5G4h - LOGO
 <img src="LOGO.png"></p>         
