--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@ video.play();
 
 
 
-								<p>Visit <a href="https://vitaforas.de"> vitaforas.de</a> o<br />r </p>             
-<a href="https://www.appcreator24.com/app2648348-r4ymif">
- <p> Download</a> our App</p>
+								Visit <a href="https://vitaforas.de"> vitaforas.de</a> o<br />r           
+<a href="https://www.appcreator24.com/app2648348-r4ymif">Download</a>our App</p>
 							</div>
 						</div>
 						<nav>
@@ -94,6 +93,8 @@ video.play();
 							</ul>
 						</nav>
 					</header>
+
+
 
 				<!-- Main -->
 					<div id="main">
