--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ video.play();
 
 
 
-								Visit <a href="https://vitaforas.de"> vitaforas.de</a> o<br />r           
-<a href="https://www.appcreator24.com/app2648348-r4ymif">Download</a>our App</p>
+								Visit <a href="https://vitaforas.de"> vitaforas.de</a> here<br />or           
+<a href="https://www.appcreator24.com/app2648348-r4ymif">Download</a> our App</p>
 							</div>
 						</div>
 						<nav>
