--- a/index.html
+++ b/index.html
@@ -105,18 +105,12 @@ video.play();
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 							
 	<p>         
-Herzlich Willkommen beim CSC Schleswig eV. iG.               
- "Cannabis Social Club"
+Herzlich Willkommen
 </p>         
  
 
-<img src="LOGO.png"> 
 
 
-<p> 
-https://ibb.co/ySg5G4h - LOGO
-<img src="LOGO.png"></p>         
- 
 <p> 
 </p>         
  
@@ -227,8 +221,10 @@ Sie dienen allein deinem Wohl im Falle der Fälle. Bei uns bist du immer auf der
 
 
 	<p>
-
+<img src="LOGO.png"> 
 </p>
+
+
 	<p>
 
 </p>
