--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
         <head>
-                <title>vitaforasTV</title>
+                <title>vitaforas.TV</title>
                 <meta charset="utf-8" />
                 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
                 <link rel="stylesheet" href="assets/css/main.css" />
@@ -29,6 +29,7 @@
 
 <figure id="video_player">
      <video width="320" height="240" autoplay loop>
+<video controls autoplay>
      <source src="video1.mp4" type="video/mp4" />
      <source src="video1.webm" type="video/webm" />
          <source src="video1.ogg" type="video/ogg" />
