--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@ video.play();
 </script>
 
 
--
+
 <script type="text/javascript">
-    var nextVideo = "path/of/next/video.mp4";
+    var nextVideo = "video2.mp4";
     var videoPlayer = document.getElementById('videoPlayer');
     videoPlayer.onended = function(){ 
     videoPlayer.src = nextVideo;
     } 
 </script> 
 <video id="videoPlayer" 
-src="path/of/current/video.mp4" autoplay autobuffer controls />
--
+src="video1.mp4" autoplay autobuffer controls />
+
                                                                 Visit <a href="https://vitaforas.de"> vitaforas.de</a> here<br />or           
 <a href="https://www.appcreator24.com/app2648348-r4ymif">Download</a> our App</p>
                                                         </div>
