--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
      <source src="video1.mp4" type="video/mp4" />
      <source src="video1.webm" type="video/webm" />
          <source src="video1.ogg" type="video/ogg" />
-             Your browser does not support the video tag.
+<source src="video2.mp4" type="video/mp4" />
+     <source src="video2.webm" type="video/webm" />
+         <source src="video2.ogg" type="video/ogg" />
+<source src="video3.mp4" type="video/mp4" />
+     <source src="video3.webm" type="video/webm" />
+         <source src="video3.ogg" type="video/ogg" />             Your browser does not support the video tag.
      </video>
      <figcaption>
      <ul>
