--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@ video.play();
 </script>
 
 
-#
-#<script type="text/javascript">
-#    var nextVideo = "video2.mp4";
-#    var videoPlayer = #document.getElementById('videoPlayer');
-#    videoPlayer.onended = function(){ 
-#    videoPlayer.src = nextVideo;
-#    } 
-#</script> 
-#<video id="videoPlayer" 
+
+<script type="text/javascript">
+    var nextVideo = "video2.mp4";
+    var videoPlayer = document.getElementById('videoPlayer');
+    videoPlayer.onended = function(){ 
+    videoPlayer.src = nextVideo;
+    } 
+</script> 
+<video id="videoPlayer" 
 src="video1.mp4" autoplay autobuffer controls />
 
                                                                 Visit <a href="https://vitaforas.de"> vitaforas.de</a> here<br />or           
