--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     videoPlayer.src = nextVideo;
     } 
 </script> 
-<video id="videoPlayer" 
+<video id="video1.mp3" 
 src="video1.mp4" autoplay autobuffer controls />
 
 
