--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                                                         <div class="inner">
                                                                 <h1>Dream-Stream.TV</h1>
 
-
-
+<video controls autoplay>
 <script type="text/javascript">
     var nextVideo = "video2.mp4";
     var videoPlayer = document.getElementById('videoPlayer');
