--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     videoPlayer.onended = function(){ 
     videoPlayer.src = nextVideo;
     } 
-<video id="video1.mp4" 
+<video id="videoPlayer" 
 src="video1.mp4" autoplay autobuffer controls />
 
 </script> 
