--- a/index.html
+++ b/index.html
@@ -69,16 +69,6 @@ video.play();
 
 
 
-<script type="text/javascript">
-    var nextVideo = "video2.mp4";
-    var videoPlayer = document.getElementById('videoPlayer');
-    videoPlayer.onended = function(){ 
-    videoPlayer.src = nextVideo;
-    } 
-</script> 
-<video id="videoPlayer" 
-src="video1.mp4" autoplay autobuffer controls />
-
 _____
 
 
@@ -93,6 +83,7 @@ _____
 <video id="videoPlayer" 
 src="video1.mp4" autoplay autobuffer controls />
 
+<video controls autoplay>
 
 
 
