Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                                 </div>
                                                 <div class="content">
                                                         <div class="inner">
-                                                                <h1>Dream-Stream.TV</h1>
+                                                                <h1>StreamTV</h1>
 
 
 
