Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 <img src="matrix.jpg" alt="20" width="50" height="60"></a>
      <a href="moonfall.mp4">
 <img src="moonfall.jpg" alt="21" width="50" height="60"></a>
-     <a href="fluch.mp4">
-<img src="fluch.jpg" alt="22" width="50" height="60"></a>
+     <a href="Chappie.mp4">
+<img src="Chappie.jpg" alt="22" width="50" height="60"></a>
      <a href="vr1.mp4">
 <img src="vr1.jpg" alt="23" width="50" height="60"></a>
      <a href="vr2.mp4">
